fix some leaflet-known safari issues
- markers now properly display popups when clicked (by disabling 'tap'-prop)
- map doesn't cover the navbar (by increasing z-index of Navbar)

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -2,7 +2,7 @@
 .nav {
     display: flex;
     bottom: 0;
-    z-index: 10;
+    z-index: 1000000;
     position: fixed;
     justify-content: space-between;
     background-color: #fff;
